Fix emoji spacing in template picker

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -4304,6 +4304,7 @@ a.status-card.compact:hover {
           margin: 0;
           width: 24px;
           height: 24px;
+          object-fit: initial;
         }
       }
     }
